--- a/utils/addHeader.yaml
+++ b/utils/addHeader.yaml
@@ -2,12 +2,19 @@ init:
   header: |
     ---
     layout: default
-    title: "{{pre}}: {{title}}"
-    parent: Guides
-    grand_parent: OpenAF docs
+    title: {{title}}
+    parent: {{pre}}
+    grand_parent: Guides
     ---
 
 jobs:
+# ----------
+- name: Init
+  exec: |
+    _$(args.pre, "pre").$_();
+    global.pre = args.pre;
+
+# ----------------
 - name: Add header
   exec: |
     _$(args.file, "file").$_();
@@ -27,6 +34,7 @@ jobs:
     io.writeFileString(args.file, f);
 
 todo:
+- name: Init
 - name: Add header
   args: |
-    io.listFiles(".").files.map(f => ({ file: f.canonicalPath, pre: "Beginner" }));
+    io.listFiles(".").files.map(f => ({ file: f.canonicalPath, pre: global.pre }));
