--- a/docs/guides/index.yaml
+++ b/docs/guides/index.yaml
@@ -4,7 +4,7 @@ jobs:
   exec: |
     ow.loadTemplate();
     ow.template.addConditionalHelpers();
-    global.files = { advanced: [], beginner: [], medium: [], oneliner: [] };
+    global.files = { advanced: [], beginner: [], medium: [], ojobio: [], oneliner: [] };
     
     $from( io.listFiles(".").files )
     .equals("isDirectory", true)
@@ -55,3 +55,6 @@ todo:
   - file    : oneliner/index.md
     title   : OneLiner
     navOrder: 4
+  - file    : ojobio/index.md
+    title   : oJobIO
+    navOrder: 5
