--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ description: OpenAF guides, concepts and how-tos documentation.
 eading_anchors: true
 nav_sort: case_sensitive
 
-ga_tracking: UA-145709474-1
+ga_tracking: 313427816
 ga_tracking_anonymize_ip: true
