--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: pmarsceill/just-the-docs
 logo: images/openaf_logo.png
+favicon_ico: images/openaf.ico"
 title: OpenAF docs
 description: OpenAF guides, concepts and how-tos documentation.
 eading_anchors: true
