schedule github action

--- a/.github/workflows/genOAFPexamples.yml
+++ b/.github/workflows/genOAFPexamples.yml
@@ -1,10 +1,12 @@
 name: Generate OAFP examples
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
+  schedule:
+  - cron: '47 6 * * *'
   workflow_dispatch:
 
 jobs:
