--- a/.github/workflows/genOAFPexamples.yml
+++ b/.github/workflows/genOAFPexamples.yml
@@ -27,8 +27,8 @@ jobs:
     # -------------------------
     - uses: actions/checkout@v3
 
-    # ---------------------
-    - name: Update counters
+    # ----------------------------
+    - name: Generate oafp examples
       uses: openaf/ojob-action@v4
       with:
         dist: nightly
@@ -49,5 +49,5 @@ jobs:
       uses: openaf/ojob-action@v4
       with:
         ojob: 'ojob.io/git/hub/contentIn'
-        args: 'message="Update\ OAFP\ examples" paths="docs/guides/oafp/"'
+        args: 'message="Update\ OAFP\ examples" title="Automated\ generate\ oafp\ examples" paths="docs/guides/oafp/"'
         dist: nightly
